# weatherfactory-tools

./: .gitignore  Cargo.toml  flake.nix
.config/: hakari.toml
BookOfHours/: search.ps1
BookOfHours/boh-cli/: Cargo.toml
BookOfHours/boh-cli/src/: log.rs  logging.rs  main.rs
BookOfHours/boh-cli/src/model/: aspected_items.rs  aspects.rs  config.rs  consider_books.rs  game_documents.rs  lessons.rs  mod.rs  save.rs  skills.rs  tomes.rs
BookOfHours/boh-cli/src/utils/: mod.rs  save.rs  sticky_payload.rs  tentacled_payload.rs
