[package]
name = "boh-cli"
version = "0.1.0"
edition = "2021"

[features]
"default" = [
    "with-sqlite-history"
]
with-sqlite-history = [
    "rustyline/with-sqlite-history"
]
with-file-history = [
    "rustyline/with-file-history"
]

[dependencies]
anyhow = "1.0.94"
cfg-if = "1.0.0"
rustyline = { version = "15.0.0", features = ["with-file-history", "with-sqlite-history"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
workspace-hack.workspace = true
