[package]
name = "boh-cli"
version = "0.1.0"
edition = "2021"

[features]
"default" = [
    "with-sqlite-history"
]
with-sqlite-history = [
    "rustyline/with-sqlite-history"
]
with-file-history = [
    "rustyline/with-file-history"
]

[dependencies]
anyhow = "1.0.94"
cfg-if = "1.0.0"
rustyline = { version = "15.0.0", features = ["with-file-history", "with-sqlite-history"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
workspace-hack.workspace = true
serde = { version = "1.0.215", features = ["derive"] }
dotenvy = "0.15.7"

strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
clipboard-rs = "0.2.2"
serde_with = "3.11.0"
serde_json_path_to_error = "0.1.4"
encoding_rs = "0.8.35"
confy = "0.6.1"
serde_json_lenient = "0.2.4"
dirs = "5.0.1"
notify = { version = "7.0.0", features = ["crossbeam-channel"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time"] }
crossbeam-channel = "0.5.13"
signal-hook = "0.3.17"